--- a/index.html
+++ b/index.html
@@ -1,188 +1,127 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Smart Farm Dashboard</title>
+  <meta charset="UTF-8">
+  <title>ESP8266 Firebase Dashboard</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Firebase v8 -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-<style>
-:root {
-    --green: #2ecc71;
-    --blue: #1abc9c;
-    --dark: #2c3e50;
-    --gray: #7f8c8d;
-}
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f2f4f8;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
 
-body {
-    font-family: 'Prompt', sans-serif;
-    background: linear-gradient(135deg, #e8f5e9, #e0f7fa);
-    margin: 0;
-    padding: 20px;
-    text-align: center;
-}
+    h1 {
+      background: #2c7be5;
+      color: white;
+      padding: 15px;
+      margin: 0;
+    }
 
-header {
-    margin-bottom: 30px;
-}
-header h1 {
-    color: var(--dark);
-}
-header p {
-    color: var(--gray);
-    font-size: 0.9rem;
-}
+    .container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
-    max-width: 900px;
-    margin: auto;
-}
+    .card {
+      background: white;
+      width: 220px;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
 
-.card {
-    background: #fff;
-    border-radius: 18px;
-    padding: 25px 20px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-}
+    .title {
+      font-size: 18px;
+      color: #666;
+    }
 
-.icon {
-    font-size: 2.5rem;
-}
+    .value {
+      font-size: 48px;
+      font-weight: bold;
+      margin: 10px 0;
+      color: #2c7be5;
+    }
 
-.value {
-    font-size: 2.8rem;
-    font-weight: 600;
-    color: var(--blue);
-}
+    .unit {
+      font-size: 20px;
+      color: #999;
+    }
 
-.unit {
-    color: var(--gray);
-}
-
-/* Buttons */
-.controls {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
-}
-
-button {
-    font-family: 'Prompt', sans-serif;
-    font-size: 1rem;
-    padding: 12px 25px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: 0 5px 12px rgba(0,0,0,0.15);
-}
-
-.btn-refresh {
-    background: var(--blue);
-    color: #fff;
-}
-
-.btn-reset {
-    background: #e74c3c;
-    color: #fff;
-}
-
-.status {
-    margin-top: 25px;
-    font-size: 0.9rem;
-    color: var(--gray);
-}
-
-footer {
-    margin-top: 40px;
-    font-size: 0.8rem;
-    color: #aaa;
-}
-</style>
+    footer {
+      margin-top: 30px;
+      color: #888;
+      font-size: 14px;
+    }
+  </style>
 </head>
 
 <body>
 
-<header>
-    <h1>🌿 Smart Farm Dashboard</h1>
-    <p>ควบคุมและดูข้อมูลฟาร์มผ่านมือถือ (GitHub Pages)</p>
-</header>
+  <h1>🌱 Smart Farm Dashboard</h1>
 
-<div class="container">
+  <div class="container">
 
     <div class="card">
-        <div class="icon">🌡️</div>
-        <h3>อุณหภูมิ</h3>
-        <div class="value" id="temp">--</div>
-        <div class="unit">°C</div>
+      <div class="title">อุณหภูมิ</div>
+      <div class="value" id="temp">---</div>
+      <div class="unit">°C</div>
     </div>
 
     <div class="card">
-        <div class="icon">💧</div>
-        <h3>ความชื้นอากาศ</h3>
-        <div class="value" id="humi">--</div>
-        <div class="unit">%</div>
+      <div class="title">ความชื้นอากาศ</div>
+      <div class="value" id="humi">---</div>
+      <div class="unit">%</div>
     </div>
 
     <div class="card">
-        <div class="icon">🌱</div>
-        <h3>ความชื้นดิน</h3>
-        <div class="value" id="soil">--</div>
-        <div class="unit">%</div>
+      <div class="title">ความชื้นดิน</div>
+      <div class="value" id="soil">---</div>
+      <div class="unit">%</div>
     </div>
 
-</div>
+  </div>
 
-<div class="controls">
-    <button class="btn-refresh" onclick="fetchData()">📡 ตรวจค่า</button>
-    <button class="btn-reset" onclick="resetDevice()">🔄 รีเซตอุปกรณ์</button>
-</div>
+  <footer>
+    Firebase Realtime Database
+  </footer>
 
-<div class="status">
-    อัปเดตล่าสุด: <span id="time">--</span>
-</div>
+  <script>
+    // 🔥 Firebase config (ตามที่คุณให้มา)
+    var firebaseConfig = {
+      apiKey: "EQcGHt2Pf2euriwy0lhEOxxW58CAWwUjyFHbE9MX",
+      databaseURL: "https://ihkj-7f951-default-rtdb.firebaseio.com"
+    };
 
-<footer>
-    Smart Farm IoT © 2026
-</footer>
+    firebase.initializeApp(firebaseConfig);
 
-<script>
-const SCRIPT_URL = "https://script.google.com/macros/s/XXXX/exec";
+    var db = firebase.database();
 
-async function fetchData() {
-    try {
-        const res = await fetch(SCRIPT_URL + "?action=read");
-        const data = await res.json();
+    // 🔄 Real-time listener
+    db.ref("/").on("value", function(snapshot) {
+      var data = snapshot.val();
 
-        document.getElementById("temp").innerText = data.temp;
-        document.getElementById("humi").innerText = data.humi;
-        document.getElementById("soil").innerText = data.soil;
-        document.getElementById("time").innerText =
-            new Date().toLocaleString("th-TH");
-    } catch (e) {
-        document.getElementById("time").innerText = "❌ ไม่สามารถเชื่อมต่อได้";
-    }
-}
+      if (data) {
+        document.getElementById("temp").innerHTML =
+          data.temperature !== undefined ? data.temperature : "---";
 
-async function resetDevice() {
-    if (!confirm("ต้องการรีเซตอุปกรณ์หรือไม่?")) return;
+        document.getElementById("humi").innerHTML =
+          data.humidity !== undefined ? data.humidity : "---";
 
-    try {
-        await fetch(SCRIPT_URL + "?action=reset");
-        document.getElementById("time").innerText = "🔄 ส่งคำสั่งรีเซตแล้ว";
-    } catch (e) {
-        alert("รีเซตไม่สำเร็จ");
-    }
-}
-
-fetchData();
-setInterval(fetchData, 5000);
-</script>
+        document.getElementById("soil").innerHTML =
+          data.soil !== undefined ? data.soil : "---";
+      }
+    });
+  </script>
 
 </body>
 </html>
