--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>ESP8266 Firebase Dashboard</title>
+  <title>Smart Farm Dashboard</title>
 
   <!-- Firebase v8 -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -10,116 +10,145 @@
 
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f2f4f8;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #e9f7f2;
       text-align: center;
     }
 
     h1 {
-      background: #2c7be5;
-      color: white;
-      padding: 15px;
-      margin: 0;
+      margin-top: 30px;
+      color: #1b4332;
     }
 
-    .container {
+    .subtitle {
+      color: #5f7161;
+      margin-bottom: 40px;
+    }
+
+    .cards {
       display: flex;
       justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
+      gap: 30px;
       flex-wrap: wrap;
     }
 
     .card {
       background: white;
       width: 220px;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      height: 220px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
-    .title {
+    .icon {
+      font-size: 48px;
+      margin-bottom: 10px;
+    }
+
+    .label {
       font-size: 18px;
-      color: #666;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
     .value {
-      font-size: 48px;
+      font-size: 36px;
       font-weight: bold;
-      margin: 10px 0;
-      color: #2c7be5;
+      color: #2d6a4f;
     }
 
     .unit {
-      font-size: 20px;
-      color: #999;
+      font-size: 16px;
+      color: #555;
+    }
+
+    .status {
+      margin-top: 25px;
+      font-size: 14px;
+      color: #666;
     }
 
     footer {
-      margin-top: 30px;
-      color: #888;
-      font-size: 14px;
+      margin-top: 40px;
+      font-size: 13px;
+      color: #999;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>🌱 Smart Farm Dashboard</h1>
+  <h1>🌿 Smart Farm Dashboard</h1>
+  <div class="subtitle">ควบคุมและดูข้อมูลฟาร์มผ่านมือถือ (GitHub Pages)</div>
 
-  <div class="container">
+  <div class="cards">
 
     <div class="card">
-      <div class="title">อุณหภูมิ</div>
-      <div class="value" id="temp">---</div>
+      <div class="icon">🌡️</div>
+      <div class="label">อุณหภูมิ</div>
+      <div class="value"><span id="temp">--</span></div>
       <div class="unit">°C</div>
     </div>
 
     <div class="card">
-      <div class="title">ความชื้นอากาศ</div>
-      <div class="value" id="humi">---</div>
+      <div class="icon">💧</div>
+      <div class="label">ความชื้นอากาศ</div>
+      <div class="value"><span id="humi">--</span></div>
       <div class="unit">%</div>
     </div>
 
     <div class="card">
-      <div class="title">ความชื้นดิน</div>
-      <div class="value" id="soil">---</div>
+      <div class="icon">🌱</div>
+      <div class="label">ความชื้นดิน</div>
+      <div class="value"><span id="soil">--</span></div>
       <div class="unit">%</div>
     </div>
 
   </div>
 
+  <div class="status" id="status">
+    อัปเดตล่าสุด: ❌ ไม่สามารถเชื่อมต่อได้
+  </div>
+
   <footer>
-    Firebase Realtime Database
+    Smart Farm IoT © 2026
   </footer>
 
   <script>
-    // 🔥 Firebase config (ตามที่คุณให้มา)
+    // Firebase config (จากที่คุณให้มา)
     var firebaseConfig = {
-      apiKey: "EQcGHt2Pf2euriwy0lhEOxxW58CAWwUjyFHbE9MX",
+      apiKey: "1.EQcGHt2Pf2euriwy0lhEOxxW58CAWwUjyFHbE9MX",
       databaseURL: "https://ihkj-7f951-default-rtdb.firebaseio.com"
     };
 
     firebase.initializeApp(firebaseConfig);
-
     var db = firebase.database();
 
-    // 🔄 Real-time listener
+    // อ่านข้อมูลแบบ real-time
     db.ref("/").on("value", function(snapshot) {
       var data = snapshot.val();
 
       if (data) {
-        document.getElementById("temp").innerHTML =
-          data.temperature !== undefined ? data.temperature : "---";
+        document.getElementById("temp").innerText =
+          data.temperature ?? "--";
 
-        document.getElementById("humi").innerHTML =
-          data.humidity !== undefined ? data.humidity : "---";
+        document.getElementById("humi").innerText =
+          data.humidity ?? "--";
 
-        document.getElementById("soil").innerHTML =
-          data.soil !== undefined ? data.soil : "---";
+        document.getElementById("soil").innerText =
+          data.soil ?? "--";
+
+        document.getElementById("status").innerText =
+          "อัปเดตล่าสุด: ✅ เชื่อมต่อแล้ว";
       }
+    }, function(error) {
+      document.getElementById("status").innerText =
+        "อัปเดตล่าสุด: ❌ ไม่สามารถเชื่อมต่อได้";
     });
   </script>
 
