--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <script>
     // Firebase config (จากที่คุณให้มา)
     var firebaseConfig = {
-      apiKey: "1.EQcGHt2Pf2euriwy0lhEOxxW58CAWwUjyFHbE9MX",
+      apiKey: "EQcGHt2Pf2euriwy0lhEOxxW58CAWwUjyFHbE9MX",
       databaseURL: "https://ihkj-7f951-default-rtdb.firebaseio.com"
     };
 
