--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Smart Farm Dashboard</title>
 
+  <!-- Firebase v8 -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background: #e9f7f2;
       text-align: center;
     }
@@ -42,11 +43,6 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
     }
 
     .icon {
@@ -83,7 +79,6 @@
       cursor: pointer;
       margin: 0 8px;
       color: white;
-      font-weight: bold;
     }
 
     .btn-check {
@@ -102,7 +97,6 @@
 
     footer {
       margin-top: 40px;
-      padding-bottom: 20px;
       font-size: 13px;
       color: #999;
     }
@@ -112,9 +106,10 @@
 <body>
 
   <h1>🌿 Smart Farm Dashboard</h1>
-  <div class="subtitle">ระบบติดตามข้อมูลฟาร์มอัจฉริยะ (Real-time)</div>
+  <div class="subtitle">ควบคุมและดูข้อมูลฟาร์มผ่านมือถือ (GitHub Pages)</div>
 
   <div class="cards">
+
     <div class="card">
       <div class="icon">🌡️</div>
       <div class="label">อุณหภูมิ</div>
@@ -135,70 +130,75 @@
       <div class="value"><span id="soil">--</span></div>
       <div class="unit">%</div>
     </div>
+
   </div>
 
   <div class="buttons">
-    <button class="btn-check" onclick="listenData()">📡 เริ่มติดตามค่า</button>
-    <button class="btn-reset" onclick="resetDisplay()">🔄 รีเซตหน้าจอ</button>
+    <button class="btn-check" onclick="readData()">🧪 ตรวจวัดค่า</button>
+    <button class="btn-reset" onclick="resetDisplay()">🔄 รีเซตอุปกรณ์</button>
   </div>
 
   <div class="status" id="status">
-    สถานะ: ⏳ รอการเชื่อมต่อ...
+    อัปเดตล่าสุด: ❌ ยังไม่ได้ตรวจวัด
   </div>
 
   <footer>
-    Smart Farm IoT © 2026 | Powered by Firebase
+    Smart Farm IoT © 2026
   </footer>
 
   <script>
-    // แก้ไข Config เป็นตัวล่าสุดที่คุณให้มา
-    const firebaseConfig = {
+    // Firebase config (ของคุณ)
+    var firebaseConfig = {
       apiKey: "AIzaSyBxVMySarMHuNuBNxDA4bDDfZH-wwZ7t-Q",
-      authDomain: "ihkj-7f951.firebaseapp.com",
-      databaseURL: "https://ihkj-7f951-default-rtdb.firebaseio.com",
-      projectId: "ihkj-7f951",
-      storageBucket: "ihkj-7f951.firebasestorage.app",
-      messagingSenderId: "963116839167",
-      appId: "1:963116839167:web:dd477626e182a33a245cca",
-      measurementId: "G-VD7YY4S02D"
+      databaseURL: "https://ihkj-7f951-default-rtdb.firebaseio.com/"
     };
 
-    // Initialize Firebase
-    if (!firebase.apps.length) {
-      firebase.initializeApp(firebaseConfig);
-    }
-    const db = firebase.database();
+    firebase.initializeApp(firebaseConfig);
+    var db = firebase.database();
 
-    // ฟังก์ชันติดตามข้อมูลแบบ Real-time (ทำงานทันทีและอัปเดตเมื่อค่าเปลี่ยน)
-    function listenData() {
-      document.getElementById("status").innerText = "สถานะ: 🟢 กำลังติดตามข้อมูล...";
-      
-      db.ref("/").on("value", (snapshot) => {
-        const data = snapshot.val();
-        if (data) {
-          // ใช้ชื่อตัวแปรตัวพิมพ์เล็กให้ตรงกับที่ส่งจาก Arduino
-          document.getElementById("temp").innerText = data.temperature !== undefined ? data.temperature : "--";
-          document.getElementById("humi").innerText = data.humidity !== undefined ? data.humidity : "--";
-          document.getElementById("soil").innerText = data.soil !== undefined ? data.soil : "--";
-          
-          const now = new Date();
-          document.getElementById("status").innerText = "อัปเดตล่าสุด: ✅ " + now.toLocaleTimeString();
-        }
-      }, (error) => {
-        console.error(error);
-        document.getElementById("status").innerText = "สถานะ: ❌ เชื่อมต่อล้มเหลว!";
-      });
-    }
+    // อ่านข้อมูลจาก /sensor (สำคัญมาก)
+    function readData() {
+      db.ref("/sensor").once("value")
+        .then(function(snapshot) {
+          var data = snapshot.val();
+          console.log("Firebase:", data);
 
-    // เริ่มทำงานทันทีที่โหลดหน้าเว็บ
-    listenData();
+          if (!data) {
+            document.getElementById("status").innerText =
+              "อัปเดตล่าสุด: ❌ ไม่พบข้อมูล";
+            return;
+          }
+
+          document.getElementById("temp").innerText =
+            data.temperature ?? "--";
+
+          document.getElementById("humi").innerText =
+            data.humidity ?? "--";
+
+          document.getElementById("soil").innerText =
+            data.soil ?? "--";
+
+          document.getElementById("status").innerText =
+            "อัปเดตล่าสุด: ✅ อ่านข้อมูลแล้ว";
+        })
+        .catch(function(error) {
+          console.error(error);
+          document.getElementById("status").innerText =
+            "อัปเดตล่าสุด: ❌ อ่านข้อมูลล้มเหลว";
+        });
+    }
 
     function resetDisplay() {
       document.getElementById("temp").innerText = "--";
       document.getElementById("humi").innerText = "--";
       document.getElementById("soil").innerText = "--";
-      document.getElementById("status").innerText = "สถานะ: 🔄 รีเซตการแสดงผลแล้ว";
+
+      document.getElementById("status").innerText =
+        "อัปเดตล่าสุด: 🔄 รีเซตหน้าจอแล้ว";
     }
+
+    // โหลดหน้าเว็บแล้วอ่านค่าอัตโนมัติ
+    window.onload = readData;
   </script>
 
 </body>
