--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     // 🔑 Firebase Web Config (ของคุณ)
     var firebaseConfig = {
       apiKey: "AIzaSyBxVMySarMHuNuBNxDA4bDDfZH-wwZ7t-Q",
-      databaseURL: "ihkj-7f951-default-rtdb.firebaseio.com/"
+      databaseURL: "ihkj-7f951-default-rtdb.firebaseio.com"
     };
 
     firebase.initializeApp(firebaseConfig);
